Fix PlayerScriptsLoader duplication with Rojo

--- a/default.project.json
+++ b/default.project.json
@@ -8,14 +8,7 @@
             
             "PlayerScriptsUpdaterPlugin": {
                 "$className": "Folder",
-                "$path": "src",
-
-                "PlayerScriptsLoader": {
-                    "$path": "src/PlayerScriptsLoader.client.lua",
-                    "$properties": {
-                        "Disabled": true
-                    }
-                }
+                "$path": "src"
             }
         }
     }
