--- a/rbxpsu.project.json
+++ b/rbxpsu.project.json
@@ -1,13 +1,6 @@
 {
     "name": "PlayerScriptUpdater",
     "tree": {
-        "$path": "src",
-
-        "PlayerScriptsLoader": {
-            "$path": "src/PlayerScriptsLoader.client.lua",
-            "$properties": {
-                "Disabled": true
-            }
-        }
+        "$path": "src"
     }
 }
